...
    <string name="clean_pages">Clean Chapters</string>
    <string name="clean_pages_description">Clean chapters before loading them.</string>
    <string name="failed_to_load_url">Failed getting content!</string>
    <string name="disable_javascript">Disable Javascript</string>
    <string name="disable_javascript_description">Some websites redirect to ads in when javascript is enabled</string>
    <string name="donations_description_new">I am happy that you want to donate! For now, please spread the word and share the app with fellow novel lovers!</string>
    <string name="language">Language</string>
    <string name="languages_supported">Languages Supported</string>
    <string name="download_chapters">Download Selected</string>
    <string name="mark_read">Mark Read</string>
    <string name="mark_unread">Mark Unread</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
...

    <!-- v0.9 Strings -->

    <string name="change_language">Language</string>
    <string name="translated">Translated %1$d out of %2$d (≈%3$s%%)</string>
    <string name="locale_system_default">System Default</string>
    <string name="locale_english">English</string>
    <string name="locale_german">German</string>
    <string name="locale_indonesian">Indonesian</string>
    <string name="locale_portuguese">Portuguese</string>
    <string name="locale_spanish">Spanish</string>
    <string name="locale_turkish">Turkish</string>
    <string name="locale_french">French</string>
    <string name="locale_Tagalog">Tagalog</string>
    <string name="locale_latin">Latin</string>
    <string name="locale_pirate">Pirate</string>
    <string name="volume_scroll_length_description">Change the distance to scroll when using volume keys</string>
    <string name="volume_scroll_length_template" translatable="false">%1$s %2$d</string>
    <string name="reverse">Reverse</string>
...
